vlib/v/checker/tests/alias_array_unknown_op_overloading_err.out
vlib/v/checker/tests/alias_array_unknown_op_overloading_err.vv:18:4: error: undefined operation `Tuple` - `Tuple`
   16 |     mut a := new_tuple(12, 4.5, 6.7, 6)
   17 |     b := new_tuple(12, 4.5, 6.7, 6)
   18 |     a -= b
      |       ~~
   19 |     println(a - b)
   20 |     println(a < b)
vlib/v/checker/tests/alias_array_unknown_op_overloading_err.vv:19:10: error: undefined operation `Tuple` - `Tuple`
   17 |     b := new_tuple(12, 4.5, 6.7, 6)
   18 |     a -= b
   19 |     println(a - b)
      |             ~~~~~
   20 |     println(a < b)
   21 |     println(a > b)
vlib/v/checker/tests/alias_array_unknown_op_overloading_err.vv:20:12: error: only `==` and `!=` are defined on arrays
   18 |     a -= b
   19 |     println(a - b)
   20 |     println(a < b)
      |               ^
   21 |     println(a > b)
   22 |     println(a <= b)
vlib/v/checker/tests/alias_array_unknown_op_overloading_err.vv:21:12: error: only `==` and `!=` are defined on arrays
   19 |     println(a - b)
   20 |     println(a < b)
   21 |     println(a > b)
      |               ^
   22 |     println(a <= b)
   23 |     println(a >= b)
vlib/v/checker/tests/alias_array_unknown_op_overloading_err.vv:22:12: error: only `==` and `!=` are defined on arrays
   20 |     println(a < b)
   21 |     println(a > b)
   22 |     println(a <= b)
      |               ~~
   23 |     println(a >= b)
   24 | }
vlib/v/checker/tests/alias_array_unknown_op_overloading_err.vv:23:12: error: only `==` and `!=` are defined on arrays
   21 |     println(a > b)
   22 |     println(a <= b)
   23 |     println(a >= b)
      |               ~~
   24 | }
